[gd_scene load_steps=6 format=2]

[ext_resource path="res://Enemy/FollowingBomb.gd" type="Script" id=1]
[ext_resource path="res://WorldElement/drawCircle.gd" type="Script" id=3]

[sub_resource type="CircleShape2D" id=1]

[sub_resource type="CircleShape2D" id=2]
radius = 100.0

[sub_resource type="CircleShape2D" id=3]
radius = 11.0

[node name="FlottingBomb" type="KinematicBody2D" groups=[
"body",
"bomb",
"enemy",
"flotting_bomb",
"frozeable",
"slow",
]]
script = ExtResource( 1 )

[node name="CircleShape" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
script = ExtResource( 3 )
inner_color = Color( 0.913725, 0.0980392, 0.192157, 1 )

[node name="SenceArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="SenceArea"]
shape = SubResource( 2 )

[node name="HitArea" type="Area2D" parent="." groups=[
"enemy",
"hitarea",
]]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="HitArea"]
shape = SubResource( 3 )
[connection signal="body_entered" from="SenceArea" to="." method="_on_SenceArea_body_entered"]
[connection signal="area_entered" from="HitArea" to="." method="_on_BlastArea_area_entered"]
